pamc/src/tests/sample_code/should_fail/type_check/type_mismatch/ill_typed_match_case_output_evaluates_to_well_typed_term.ph
type Bool {
    .False: Bool,
    .True: Bool,
}

type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let identity = fun _(T: Type, t: T): T { t };

let foo = fun _(n: Nat): Nat {
    match n {
        .O => identity(Bool, Nat.O),
        .S(n') => identity(Bool, Nat.O),
    }
};
